adjusted height on end-screen to prevent layout shifts

--- a/src/scss/pages/game-ended.scss
+++ b/src/scss/pages/game-ended.scss
@@ -8,9 +8,10 @@
 .endscreen{
     @include flex-center(column, 64px);
     justify-content: flex-start;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: var(--background);
+    padding-bottom: 50px;
     &__confetti{
         max-width: 100vw;
         width: 1240px;
